        by findMethods() and other changes.  Creating objects from the
        MethodsList class is also deprecated.

    o 	Parsing strings containing both octal/hex and Unicode escapes
	now gives a warning and will become an error in R 2.12.0.


INSTALLATION

    o	UTF-8 is now used for the reference manual and package
	manuals.  This requires LaTeX '2005/12/01' or later.


PACKAGE INSTALLATION

    o	Characters in R source which are not translatable to the
	current locale are now handled more tolerantly:  these will be
	converted to hex codes with a warning.  Such characters are
	only really portable if they appear in comments.

    o	R CMD INSTALL now tests that the installed package can be loaded
	(and backs out the installation if it cannot): this can be
	suppressed by --no-test-load.  This avoids installing/updating
	a package that cannot be used: common causes of failures to
	load are missing/incompatible external software and
	missing/broken dependent packages.

    o	Package installation on Windows for a package with a src
	directory now checks if a DLL is created unless there is a
	src/Makefile.win file: this helps catch broken installations
	where the toolchain has not reported problems in building the DLL.
	(Note: this can be any DLL, not just one named <pkg-name>.dll.)


BUG FIXES

    o	Using with(), eval() etc with a list with some unnamed
	elements now works. (PR#14035)

    o	The "quick" dispatch of S4 methods for primitive functions was
	not happening, forcing a search each time.  (Dispatch for
	closures was not affected.)  A side effect is that default
	values for arguments in a method that do not have defaults in
	the generic will now be ignored.

    o	Trying to dispatch S4 methods for primitives during the search
	for inherited methods slows that search down and potentially
	could cause an infinite recursion.  An internal switch was
	added to turn off all such methods from
	findInheritedMethods().
