@@ -93,6 +93,7 @@ SHLIB_LINK = $(SHLIB_LD) $(SHLIB_LDFLAGS) $(LDFLAGS)
 STRIP_LIBS = @striplib@
 STRIP_STATIC_LIBS = @stripstaticlib@
 TAR = @TAR@
+TR = @TR@
 USE_NLS = @USE_NLS@
 X_CFLAGS = @X_CFLAGS@
 X_LIBS = @X_LIBS@
