@@ -2395,8 +2395,8 @@ extensions to include the POSIX functionality.}.  If the compiler is
 detected as @command{gcc}, @option{-std=gnu99} will be appended to
 @code{CC} unless it conflicts with a setting of @code{CFLAGS}.  (Note
 that options essential to run the compiler even for linking, such as
-those to set the architecture, should be part of @code{CC} rather than
-of @code{CFLAGS}.)
+those to set the architecture, should be specified as part of @code{CC}
+rather than of @code{CFLAGS}.)
 
 Unless you do not want to view graphs on-screen you need @samp{X11}
 installed, including its headers and client libraries. For recent Fedora
@@ -2415,11 +2415,11 @@ equivalent).
 A suitably comprehensive @code{iconv} function is essential.  The @R{}
 usage requires @code{iconv} to be able to translate between
 @code{"latin1"} and @code{"UTF-8"}, to recognize @code{""} as the
-current encoding and to translate to and from the Unicode wide-character
-formats @code{"UCS-[24][BL]E"} --- this is true for @code{glibc} but not
-of most commercial Unixes.  However, you can make use of @acronym{GNU}
-@code{libiconv} (possibly as a plug-in replacement: see
-@uref{http://www.gnu.org/@/software/@/libiconv/}).  
+current encoding and @code{"ASCII"}, and to translate to and from the
+Unicode wide-character formats @code{"UCS-[24][BL]E"} --- this is true
+for @code{glibc} but not of most commercial Unixes.  However, you can
+make use of @acronym{GNU} @code{libiconv} (possibly as a plug-in
+replacement: see @uref{http://www.gnu.org/@/software/@/libiconv/}).
 
 The OS needs to have enough support@footnote{specifically, the C99
 functionality of headers @file{wchar.h} and @file{wctype.h}, types
@@ -2504,14 +2504,14 @@ later, including 1.4.0) and @code{zlib} (version 1.1.3 or later) or
 tested) respectively.
 
 If you have them installed (including the appropriate headers and of
-recent enough versions), @code{zlib}, @code{libbz2} and PCRE will be
-used if specified by @option{--with-system-zlib},
-@option{--with-system-bzlib} or @option{--with-system-pcre}: otherwise
-versions in the @R{} sources will be compiled in.  As the latter suffice
-and are tested with @R{} you should not need to change this.  In
-particular, the version of @code{zlib} 1.2.3 in the @R{} sources has
-enhancements to work with large file systems on 32-bit platforms, and
-@code{zlib} 1.2.4 is not currently compatible with @R{}. 
+suitable versions), @code{zlib}, @code{libbz2} and PCRE will be used if
+specified by @option{--with-system-zlib}, @option{--with-system-bzlib}
+or @option{--with-system-pcre}: otherwise versions in the @R{} sources
+will be compiled in.  As the latter suffice and are tested with @R{} you
+should not need to change this.  In particular, the version of
+@code{zlib} 1.2.3 in the @R{} sources has enhancements to work with
+large file systems on 32-bit platforms, and @code{zlib} 1.2.4 is not
+currently compatible with @R{}.
 
 @code{liblzma} from @code{xz-utils} version 4.999 or later will be used
 if installed: the version in the @R{} sources can be selected instead by
@@ -2683,7 +2683,7 @@ to be usable from a shared object (so must contain position-independent
 code), and that is not checked.
 
 Some enhanced BLASes are compiler-system-specific (@code{libsunperf} on
-Sun Sparc@footnote{Using the Sun Ceres @command{cc} and @command{f95}
+Sun Sparc@footnote{Using the Sun Studio @command{cc} and @command{f95}
 compilers}, @code{libessl} on IBM, @code{vecLib} on Mac OS X).  The
 correct incantation for these is usually found @emph{via}
 @option{--with-blas} with no value on the appropriate platforms.
@@ -2753,10 +2753,10 @@ when building from source, and
 @node ACML, Goto BLAS, ATLAS, BLAS
 @subsubsection ACML
 
-For @cputype{x86_64} and @cputype{i686} processors under Linux and
-Solaris 10 there is the AMD Core Math Library (ACML)
-@uref{http://www.amd.com/@/acml}.  For the @command{gcc} version we
-could use
+@c : there used to be Solaris 10, but it seems no more.
+For @cputype{x86_64} and @cputype{i686} processors under Linux there is
+the AMD Core Math Library (ACML) @uref{http://www.amd.com/@/acml}.  For
+the @command{gcc} version we could use
 
 @example
 --with-blas="-lacml"
@@ -3719,7 +3719,8 @@ suggests that @option{-pc64} may be desirable.
 @node Sun Studio compilers,  , PGI compilers, Linux
 @subsection Sun Studio compilers
 
-Brian Ripley tested the Sun Studio 12 (aka Sun Ceres) compilers
+Brian Ripley tested the Sun Studio 12 (aka Sun Ceres, formerly Sun
+Forte) compilers
 (@uref{http://developers.sun.com/@/sunstudio/@/index.jsp}) on
 @cputype{x86_64} Linux with
 
@@ -3845,9 +3846,6 @@ i386} for a 32-bit build and @option{-arch x86_64} for a 64-bit build:
 the Apple compilers default to 64-bit but the @command{gfortran}
 supplied on @acronym{CRAN} defaults to 32-bit.
 
-@command{gcc-4.2} is the default compiler, and is best matched with
-@command{gfortran-4.2} from the @R{} Mac OS X distribution.
-
 Another quirk is that people have found that the X11 libraries are not
 in the default linking path, so something like
 @samp{LIBS=-L/usr/X11/lib} may be required.
@@ -3876,6 +3874,11 @@ path.  Also, a version of the preferred @acronym{GNU} @command{tar} is
 (if installed) in @file{/usr/sfw/bin}, as sometimes are tools like
 @command{makeinfo}.
 
+It is neccessary to avoid the tools in @file{/usr/ucb}: in particular
+@file{/usr/ucb/tr} causes @command{R CMD Rdiff} to malfunction.
+@command(configure} looks for a POSIX-compliant @command{tr}, e.g. in
+@file{/usr/xpg4/bin}.
+
 Modern Solaris systems allow a large selection of Open Source software
 to be installed from @url{http://www.opencsw.org} (formerly
 @url{http://www.blastwave.org}) via @command{pkg-get}, by default
@@ -3886,14 +3889,6 @@ is not sufficiently powerful.
 Some people have reported that the Solaris @code{libintl} needs to be
 avoided, for example by using @option{--disable-nls} or
 @option{--with-included-gettext} or using @code{libintl} from OpenCSW.
-
-If using @command{gcc}, do ensure that the compiler was compiled for the
-version of Solaris in use.  (This can be ascertained from @command{gcc
--v}.)  @command{gcc} makes modified versions of some header files, and
-several reports of problems were due to using @command{gcc} compiled on
-one version of Solaris on a later version.  A version of @command{gcc}
-optimized for Sparc (using technology from Sun's compilers) is available
-from Sun.@footnote{@uref{http://www.sun.com/download/index.jsp?@/cat=Application%20Development&tab=3&subcat=Development%20Tools}}
 
 When using the Sun compilers@footnote{including @command{gcc} for Sparc
 from Sun.} do @emph{not} specify @option{-fast}, as this disables
@@ -3925,17 +3920,17 @@ flags).  For a 64-bit target add @option{-m64} to the compiler macros
 and use something like @code{LDFLAGS=-L/opt/csw/lib/sparcv9} or
 @code{LDFLAGS=-L/usr/local/lib/amd64} as appropriate.
 
-By default the Sun Studio compilers do not conform to the C99 standard
-(appendix F 8.9) on the return values of functions such as @code{log}:
-use @option{-xlibmieee} to ensure this.  Also, errors have been reported
-on @cputype{amd64} if @option{-xc99} is omitted.
+By default the Sun Studio compilers do not by default conform to the C99
+standard (appendix F 8.9) on the return values of functions such as
+@code{log}: use @option{-xlibmieee} to ensure this.  Also, errors have
+been reported on @cputype{amd64} if @option{-xc99} is omitted.
 
 You can target specific Sparc architectures for (slightly) higher
 performance: Sun recommend
 
 @example
 @r{32-bit:} -xtarget=ultra3 -xarch=v8plusa
-@r{64-bit:} -xtarget=ultra3 -xarch=v9a
+@r{64-bit:} -xtarget=ultra3 -xarch=sparcvis2
 @end example
 
 @noindent
@@ -3944,11 +3939,55 @@ performance: Sun recommend
 On @cputype{x86} you will get marginally higher performance @emph{via}
 
 @example
-CFLAGS="-xO5 -xc99 -xlibmieee -xlibmil -nofstore"
-FFLAGS="-O5 -libmil -nofstore"
-CXXFLAGS="-xO5 -xlibmil -nofstore"
-SAFE_FFLAGS="-O5 -libmil -fstore"
+CFLAGS="-xO5 -xc99 -xlibmieee -xlibmil -nofstore -xtarget=native"
+FFLAGS="-O5 -libmil -nofstore -xtarget=native"
+CXXFLAGS="-xO5 -xlibmil -nofstore -xtarget=native"
+SAFE_FFLAGS="-O5 -libmil -fstore -xtarget=native"
 @end example
+
+Many packages using C++ will need the more liberal interpretation given by
+
+@example
+CXXFLAGS="-features=tmplrefstatic"
+@end example
+
+
+@cindex BLAS library
+@cindex LAPACK library
+
+The Sun performance library @code{libsunperf} is available for use with
+the Sun Studio compilers.  If selected as a BLAS, it must also be
+selected as LAPACK via
+
+@example
+./configure --with-blas=sunperf --with-lapack
+@end example
+
+@noindent
+@c However, our tests were none too successful.  Sparc 32-bit builds
+@c worked, but 64-bit Sparc builds failed in @code{example(eigen)},
+@c and @cputype{x86} builds failed in @code{example(bw.SJ)}.
+This has often given test failures in the past, in several different
+places.  For Solaris 10 in early 2010 this worked with 32-bit Sparc and
+32-bit Opteron, but failed on both 64-bit Sparc and Opteron in
+@code{example(eigen)}.
+
+
+@menu
+* Using gcc::                   
+@end menu
+
+@node Using gcc,  , Solaris, Solaris
+@subsection Using gcc
+
+If using @command{gcc}, ensure that the compiler was compiled for the
+version of Solaris in use.  (This can be ascertained from @command{gcc
+-v}.)  @command{gcc} makes modified versions of some header files, and
+several reports of problems were due to using @command{gcc} compiled on
+one version of Solaris on a later version.  A version of @command{gcc}
+optimized for Sparc (using technology from Sun's compilers) is available
+from
+Sun.@footnote{@uref{http://www.sun.com/download/index.jsp?@/cat=Application%20Development&tab=3&subcat=Development%20Tools}}
 
 Compilation for a 32-bit Sparc target with @command{gcc}@tie{}4 
 (@command{gcc}@tie{}4.3.3 but @command{gfortran}@tie{}4.0.2) needed
@@ -3984,26 +4023,6 @@ less successful: @cputype{x86} builds have failed on tests using complex
 arithmetic@footnote{these can often be resolved by turning off
 optimization}, whereas on @cputype{amd64} the builds have failed to
 complete in several different ways.
-
-@cindex BLAS library
-@cindex LAPACK library
-
-The Sun performance library @code{libsunperf} is available for use with
-the Sun Studio compilers.  If selected as a BLAS, it must also be
-selected as LAPACK via
-
-@example
-./configure --with-blas=sunperf --with-lapack
-@end example
-
-@noindent
-@c However, our tests were none too successful.  Sparc 32-bit builds
-@c worked, but 64-bit Sparc builds failed in @code{example(eigen)},
-@c and @cputype{x86} builds failed in @code{example(bw.SJ)}.
-This has often given test failures in the past, in several different
-places.  For Solaris 10 in early 2010 this worked with 32-bit Sparc and
-32-bit Opteron, but failed on both 64-bit Sparc and Opteron in
-@code{example(eigen)}.
 
 
 @node AIX, Cygwin, Solaris, Platform notes
@@ -4070,7 +4089,7 @@ default shell to be Bash rather than Zsh.
 
 Kurt Hornik and Stefan Theussl at WU (Wirtschaftsuniversit@"at Wien)
 successfully built R on a @cputype{powerpc} (8-@acronym{CPU} Power6
-system) on AIX 6.1, configuring with or without
+system) running AIX 6.1, configuring with or without
 @option{--enable-R-shlib} (Ei-ji Nakama's support is gratefully
 acknowledged).
 
