@@ -41,6 +41,7 @@ MAKE=${MAKE-'@MAKE@'}
 PERL=${PERL-'@PERL@'}
 ## Prefer a POSIX-compliant sed on e.g. Solaris
 SED=${SED-'@SED@'}
+TR=${TR-'@TR@'}
 ## Prefer a tar that can automagically read compressed archives
 TAR=${TAR-'@TAR@'}
 
